--- a/public/main.scss
+++ b/public/main.scss
@@ -54,6 +54,10 @@ html[data-theme='dark'] {
   background-color: #2f587a;
 }
 
+.text-light {
+  color: var(--light-shade) !important;
+}
+
 /* GLOBAL */
 
 * {
@@ -85,7 +89,7 @@ b {
 }
 
 a:hover {
-  color: var(--main-light) !important;
+  color: var(--main) !important;
 }
 
 p {
@@ -183,7 +187,7 @@ p {
   bottom: 10px;
   margin-top: 10px;
   margin-right: 15px;
-  left: 25px;
+  left: 35px;
 
   span {
     margin: 5px;
@@ -198,7 +202,7 @@ p {
   min-height: 300px;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   border: 3px solid var(--dark-border) !important;
-  margin: 10px 0;
+  // margin: 5px 0;
   // color: white;
 
   h1 {
@@ -209,7 +213,7 @@ p {
   p {
     font-size: 16px;
     opacity: 0.95;
-    text-indent: 5px;
+    text-indent: 10px;
     font-weight: 300;
   }
 }
@@ -254,6 +258,9 @@ p {
 .main-section.even {
   background-color: var(--light-shade);
 }
+.section-header {
+  color: var(--main-dark);
+}
 
 .text-main {
   color: var(--main);
@@ -286,7 +293,7 @@ p {
 input.form-control {
   background-color: var(--darker-shade);
   border: none;
-  color: white;
+  color: var(--lightest-shade);
   height: 40px;
 }
 
@@ -321,6 +328,8 @@ div.form-control {
   .profile-img {
     border-radius: 50%;
     border: 5px solid #33a1fd3b !important;
+    // box-shadow: 0 0.25rem 0.2rem rgba(0, 0, 0, 0.15) !important;
+    width: 100%;
   }
 
   .paragraph {
@@ -493,112 +502,113 @@ div.form-control {
   .bg-clipper {
     background: url('/svg/topography.svg');
     background-color: var(--darker-shade);
-
-    clip-path: polygon(
-      100% 0%,
-      0% 0%,
-      0% 95.65%,
-      1% 95.64%,
-      2% 95.61%,
-      3% 95.55%,
-      4% 95.48%,
-      5% 95.38%,
-      6% 95.26%,
-      7% 95.12%,
-      8% 94.96%,
-      9% 94.78%,
-      10% 94.59%,
-      11% 94.38%,
-      12% 94.15%,
-      13% 93.91%,
-      14% 93.65%,
-      15% 93.39%,
-      16% 93.11%,
-      17% 92.82%,
-      18% 92.53%,
-      19% 92.23%,
-      20% 91.92%,
-      21% 91.61%,
-      22% 91.3%,
-      23% 90.99%,
-      24% 90.68%,
-      25% 90.38%,
-      26% 90.08%,
-      27% 89.78%,
-      28% 89.5%,
-      29% 89.22%,
-      30% 88.95%,
-      31% 88.7%,
-      32% 88.45%,
-      33% 88.23%,
-      34% 88.02%,
-      35% 87.82%,
-      36% 87.64%,
-      37% 87.49%,
-      38% 87.35%,
-      39% 87.23%,
-      40% 87.13%,
-      41% 87.05%,
-      42% 87%,
-      43% 86.97%,
-      44% 86.96%,
-      45% 86.97%,
-      46% 87%,
-      47% 87.06%,
-      48% 87.13%,
-      49% 87.23%,
-      50% 87.35%,
-      51% 87.49%,
-      52% 87.65%,
-      53% 87.83%,
-      54% 88.02%,
-      55% 88.23%,
-      56% 88.46%,
-      57% 88.7%,
-      58% 88.96%,
-      59% 89.23%,
-      60% 89.51%,
-      61% 89.79%,
-      62% 90.09%,
-      63% 90.39%,
-      64% 90.69%,
-      65% 91%,
-      66% 91.31%,
-      67% 91.62%,
-      68% 91.93%,
-      69% 92.24%,
-      70% 92.54%,
-      71% 92.83%,
-      72% 93.12%,
-      73% 93.4%,
-      74% 93.66%,
-      75% 93.92%,
-      76% 94.16%,
-      77% 94.39%,
-      78% 94.6%,
-      79% 94.79%,
-      80% 94.97%,
-      81% 95.13%,
-      82% 95.26%,
-      83% 95.38%,
-      84% 95.48%,
-      85% 95.56%,
-      86% 95.61%,
-      87% 95.64%,
-      88% 95.65%,
-      89% 95.64%,
-      90% 95.61%,
-      91% 95.55%,
-      92% 95.47%,
-      93% 95.37%,
-      94% 95.25%,
-      95% 95.11%,
-      96% 94.96%,
-      97% 94.78%,
-      98% 94.58%,
-      99% 94.37%,
-      100% 94.14%
-    );
+    clip-path: none;
+    // clip-path: polygon(100% 0%, 0% 0%, 0% 100.00%, 1% 99.99%, 2% 99.96%, 3% 99.90%, 4% 99.82%, 5% 99.73%, 6% 99.61%, 7% 99.47%, 8% 99.31%, 9% 99.13%, 10% 98.94%, 11% 98.73%, 12% 98.50%, 13% 98.26%, 14% 98.00%, 15% 97.73%, 16% 97.46%, 17% 97.17%, 18% 96.87%, 19% 96.57%, 20% 96.27%, 21% 95.96%, 22% 95.65%, 23% 95.34%, 24% 95.03%, 25% 94.72%, 26% 94.42%, 27% 94.13%, 28% 93.84%, 29% 93.57%, 30% 93.30%, 31% 93.04%, 32% 92.80%, 33% 92.57%, 34% 92.36%, 35% 92.17%, 36% 91.99%, 37% 91.83%, 38% 91.70%, 39% 91.58%, 40% 91.48%, 41% 91.40%, 42% 91.35%, 43% 91.32%, 44% 91.30%, 45% 91.32%, 46% 91.35%, 47% 91.40%, 48% 91.48%, 49% 91.58%, 50% 91.70%, 51% 91.84%, 52% 92.00%, 53% 92.18%, 54% 92.37%, 55% 92.58%, 56% 92.81%, 57% 93.05%, 58% 93.31%, 59% 93.57%, 60% 93.85%, 61% 94.14%, 62% 94.43%, 63% 94.74%, 64% 95.04%, 65% 95.35%, 66% 95.66%, 67% 95.97%, 68% 96.28%, 69% 96.58%, 70% 96.89%, 71% 97.18%, 72% 97.47%, 73% 97.74%, 74% 98.01%, 75% 98.27%, 76% 98.51%, 77% 98.73%, 78% 98.94%, 79% 99.14%, 80% 99.32%, 81% 99.47%, 82% 99.61%, 83% 99.73%, 84% 99.83%, 85% 99.90%, 86% 99.96%, 87% 99.99%, 88% 100.00%, 89% 99.99%, 90% 99.95%, 91% 99.90%, 92% 99.82%, 93% 99.72%, 94% 99.60%, 95% 99.46%, 96% 99.30%, 97% 99.13%, 98% 98.93%, 99% 98.72%, 100% 98.49%);
+    // clip-path: polygon(
+    //   100% 0%,
+    //   0% 0%,
+    //   0% 95.65%,
+    //   1% 95.64%,
+    //   2% 95.61%,
+    //   3% 95.55%,
+    //   4% 95.48%,
+    //   5% 95.38%,
+    //   6% 95.26%,
+    //   7% 95.12%,
+    //   8% 94.96%,
+    //   9% 94.78%,
+    //   10% 94.59%,
+    //   11% 94.38%,
+    //   12% 94.15%,
+    //   13% 93.91%,
+    //   14% 93.65%,
+    //   15% 93.39%,
+    //   16% 93.11%,
+    //   17% 92.82%,
+    //   18% 92.53%,
+    //   19% 92.23%,
+    //   20% 91.92%,
+    //   21% 91.61%,
+    //   22% 91.3%,
+    //   23% 90.99%,
+    //   24% 90.68%,
+    //   25% 90.38%,
+    //   26% 90.08%,
+    //   27% 89.78%,
+    //   28% 89.5%,
+    //   29% 89.22%,
+    //   30% 88.95%,
+    //   31% 88.7%,
+    //   32% 88.45%,
+    //   33% 88.23%,
+    //   34% 88.02%,
+    //   35% 87.82%,
+    //   36% 87.64%,
+    //   37% 87.49%,
+    //   38% 87.35%,
+    //   39% 87.23%,
+    //   40% 87.13%,
+    //   41% 87.05%,
+    //   42% 87%,
+    //   43% 86.97%,
+    //   44% 86.96%,
+    //   45% 86.97%,
+    //   46% 87%,
+    //   47% 87.06%,
+    //   48% 87.13%,
+    //   49% 87.23%,
+    //   50% 87.35%,
+    //   51% 87.49%,
+    //   52% 87.65%,
+    //   53% 87.83%,
+    //   54% 88.02%,
+    //   55% 88.23%,
+    //   56% 88.46%,
+    //   57% 88.7%,
+    //   58% 88.96%,
+    //   59% 89.23%,
+    //   60% 89.51%,
+    //   61% 89.79%,
+    //   62% 90.09%,
+    //   63% 90.39%,
+    //   64% 90.69%,
+    //   65% 91%,
+    //   66% 91.31%,
+    //   67% 91.62%,
+    //   68% 91.93%,
+    //   69% 92.24%,
+    //   70% 92.54%,
+    //   71% 92.83%,
+    //   72% 93.12%,
+    //   73% 93.4%,
+    //   74% 93.66%,
+    //   75% 93.92%,
+    //   76% 94.16%,
+    //   77% 94.39%,
+    //   78% 94.6%,
+    //   79% 94.79%,
+    //   80% 94.97%,
+    //   81% 95.13%,
+    //   82% 95.26%,
+    //   83% 95.38%,
+    //   84% 95.48%,
+    //   85% 95.56%,
+    //   86% 95.61%,
+    //   87% 95.64%,
+    //   88% 95.65%,
+    //   89% 95.64%,
+    //   90% 95.61%,
+    //   91% 95.55%,
+    //   92% 95.47%,
+    //   93% 95.37%,
+    //   94% 95.25%,
+    //   95% 95.11%,
+    //   96% 94.96%,
+    //   97% 94.78%,
+    //   98% 94.58%,
+    //   99% 94.37%,
+    //   100% 94.14%
+    // );
     height: 100vh;
   }
 }
@@ -632,7 +642,7 @@ div.form-control {
 @media (max-width: 1700px) {
 }
 
-@media (max-height: 950px) {
+@media (max-height: 920px) {
   #portfolio-section {
     .bg-clipper {
       clip-path: none;
@@ -800,4 +810,53 @@ label:active:after {
       }
     }
   }
+}
+
+////////////////////////////@at-root
+///
+/// // Example 2
+@keyframes scrollAnim {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  75% {
+    transform: translateY(0.75em);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+}
+
+.scroll-icon__dot {
+  display: block;
+  position: absolute;
+  left: 50%;
+  background: #fff;
+  height: 0.5em;
+  width: 0.5em;
+  top: 0.6em;
+  margin-left: -0.25em;
+  border-radius: 50%;
+  transform-origin: top center;
+  backface-visibility: hidden;
+  animation: scrollAnim 1.2s ease-out infinite;
+}
+
+// General icon style
+.scroll-icon {
+  display: block;
+  position: relative;
+  height: 50px;
+  width: 30px;
+  border: 2px solid rgba(255, 255, 255, 0.65);
+  border-radius: 1em;
 }
