--- a/public/main.scss
+++ b/public/main.scss
@@ -489,6 +489,7 @@ div.form-control {
 #portfolio-section {
   background: url('/svg/topography.svg');
   background-color: var(--darker-shade);
+  overflow: hidden;
 
   .portfolio-container {
     position: relative;
@@ -687,7 +688,13 @@ div.form-control {
   .bg-clipper {
     height: auto !important;
   }
+     #landing-section {
+       .bg-clipper {
+         height: 175vh !important;
+       }
+     }
 }
+
 
 /* TOOLTIP */
 .tooltipSpecial {
